--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@discordjs/voice": "^0.18.0",
+    "chalk": "^4.1.2",
     "discord.js-selfbot-v13": "^3.7.0",
     "readline": "^1.3.0"
   }
